--- a/accessibility.html
+++ b/accessibility.html
@@ -48,7 +48,7 @@
 
 
         <div class="accContent">
-            <h2>The process</h2>
+            <h2 class="h2Acc">The process</h2>
             <p class="pAcc">In the beginning we just wanted a basic layout for our website. 
                 A heading-image, title, navigation bar, and a basic content-container. 
                 We chose to use a default font to ensure that every website would have the same font, thus keeping the style consistent between browsers.
