--- a/fun_page.html
+++ b/fun_page.html
@@ -47,14 +47,15 @@
         (videos or pictures). -->
 
     </div>
+    <div class="mazeP">
+        <br>
+        <p>BGM can be turned off within the white space.</p>
+        <p>Have fun while exploring for the button.</p>
+        
+    </div>
     <!-- COLUMN -->
     <div class="funPageContent">
         <div class="mazeBody">
-            <div class="mazeP">
-                <br>
-                <p>!Beware! Mobile cannot support bigger numbers</p>
-
-            </div>
             <div class="maze">
 
                 <div class="canvasLeft">
@@ -91,7 +92,7 @@
             <span class="randomizer belize">overcomplicated.</span>
             <span class="randomizer wisteria">a_pain.</span>
             <span class="randomizer pomegranate">cool.</span>
-            <span class="randomizer green">hip.</span>
+            <span class="randomizer green">a_hit.</span>
             <span class="randomizer midnight">js.</span>
         </div>
 
@@ -105,7 +106,7 @@
 
     <script>
         /*alert("Audio Warning")*/
-        window.onresize = function(event){
+        window.onload = function(event){
             if ((window.innerWidth < 800)){
                 alert("Warning, avoid big numbers when using the Maze on mobile.")
             };
