--- a/fun_page.html
+++ b/fun_page.html
@@ -89,7 +89,7 @@
             <span class="randomizer midnight">free.</span>
             <span class="randomizer pomegranate">love.</span>
             <span class="randomizer green">tiring.</span>
-            <span class="randomizer belize">overcomplicated.</span>
+            <span class="randomizer belize">complicated.</span>
             <span class="randomizer wisteria">a_pain.</span>
             <span class="randomizer pomegranate">cool.</span>
             <span class="randomizer green">a_hit.</span>
