--- a/fun_page.html
+++ b/fun_page.html
@@ -111,8 +111,9 @@
 
         /* Javascript Random Word*/
 
-        /* This code was made at Foss VGS by one of the students within this group.
+        /* This code was made at High School by one of the students within this group.
            Upon creating this code, there would most likely be help from the teacher/web
+           including the corrections that were made after recieving the "løsningsforslag".
         */
 
         var words = document.getElementsByClassName("randomizer");
@@ -175,7 +176,7 @@
 
         /* This code was made at Foss VGS by one of the students within this group.
            Upon creating this code, there would most likely be help from the teacher/web
-           including the corrections that were made after recieving the "løsningsforslag"
+           including the corrections that were made after recieving the "løsningsforslag".
         */
 
         pathWidth = 20       //PathBredde
