deleted one enter
asdf

--- a/fun_page.html
+++ b/fun_page.html
@@ -91,7 +91,7 @@
     <script>
 
         /* Javascript Mobile Check, warning does not come upon resize as it would
-           give the warning for every resize that occurs within the given value
+           give the warning for every resize that occurs within the given value.
         */
        
         window.onload = function(event){
